--- a/css/style.css
+++ b/css/style.css
@@ -241,6 +241,39 @@ h1{
     margin-bottom: 10px;
 }
 }
+/*===============================================HOMEPAGE =============================================================*/
+.home-container{
+    display: grid;
+    grid-template-columns: 65% 35%;
+}
+.home-portfolio, .home-watchlist{
+}
+.home-portfolio-title{
+    margin: 10px 10%;
+    display: inline-block;
+    width: 30%;
+}
+.home-icon{
+    font-size: 30px;
+}
+.home-status{
+    background-color: aquamarine;
+    margin-top: 20px;
+    margin-right: 20px;
+    grid-row: 1/3;
+    grid-column: 2/3;
+}
+@media only screen and (max-width: 760px){
+    .home-container{
+        display: grid;
+        grid-template-columns: 100%;
+    }
+    .home-status{
+        margin-right: 20px;
+        grid-row: 0;
+        grid-column: 0;
+    }   
+}
 /*===============================================CHART=============================================================*/
 .chart-wrapper{
     margin-top: 20px;
@@ -265,7 +298,7 @@ h1{
 .fa-long-arrow-alt-up, .chart-data{
     color: lightgreen;
 }
-/*===============================================SEARCH RESULT =============================================================*/
+/*===============================================SEARCH RESULT =====================================================*/
 #chartContainer{
     height: 370px; 
     width: 70%;
