--- a/css/style.css
+++ b/css/style.css
@@ -1,326 +1,414 @@
-
 @import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
+
 .row-flex {
-  display: flex;
-  flex-wrap: wrap;
+	display: flex;
+	flex-wrap: wrap;
 }
-.page-wrap{
+
+.page-wrap {
 	width: 1000px;
 }
-.card-img-top{
+
+.card-img-top {
 	object-fit: cover;
 }
-.containter{
+
+.containter {
 	margin: 0 auto !important;
-	display:inline-block;
+	display: inline-block;
 	width: 980px;
 }
+
 .b {
-    min-height: 70px;
+	min-height: 70px;
 }
-.navbar-text{
-    width: 300px;
+
+.navbar-text {
+	width: 300px;
 }
-.mx-auto{
+
+.mx-auto {
 	font-size: 20px;
 	text-align: center !important;
 }
-h1{
-    margin: 10px 10%;
-    display: inline-block;
-    width: 30%;
-}
-.fa-cog{
-    width: 39%;
-    text-align: right;
-    font-size: 40px;
-}
-table {
-    width: 80%;
-    margin: 0 auto;
-  }
 
-  th {
-    background: #40424C;
-    color: white;
-    font-weight: bold;
-  }
-  td{
-    color: #949BA2;
-  }
-  td, th {
-    padding: 6px;
-    text-align: left;
-    border-bottom: 1px solid #949BA2;
-  }
-  tr{
-      background-color:#40424C;
-  }
-  td:last-child {
-    color: green;
-} 
+h1 {
+	margin: 10px 10%;
+	display: inline-block;
+	width: 30%;
+}
+
+.fa-cog {
+	width: 39%;
+	text-align: right;
+	font-size: 40px;
+}
+
+table {
+	width: 80%;
+	margin: 0 auto;
+}
+
+th {
+	background: #40424C;
+	color: white;
+	font-weight: bold;
+}
+
+td {
+	color: #949BA2;
+}
+
+td,
+th {
+	padding: 6px;
+	text-align: left;
+	border-bottom: 1px solid #949BA2;
+}
+
+tr {
+	background-color: #40424C;
+}
+
+td:last-child {
+	color: green;
+}
+
 .btn-search {
-    background: #424242;
-    border-radius: 0;
-    color: #fff;
-    border-width: 1px;
-    border-style: solid;
-    border-color: #1c1c1c;
-    padding-top: 9px;
+	background: #424242;
+	border-radius: 0;
+	color: #fff;
+	border-width: 1px;
+	border-style: solid;
+	border-color: #1c1c1c;
+	padding-top: 9px;
 }
-.btn-search:link, .btn-search:visited {
-  color: #fff;
+
+.btn-search:link,
+.btn-search:visited {
+	color: #fff;
 }
-.btn-search:active, .btn-search:hover {
-  background: #1c1c1c;
-  color: #fff;
+
+.btn-search:active,
+.btn-search:hover {
+	background: #1c1c1c;
+	color: #fff;
 }
-.search{
-    width: 1000px !important;
-}  
-.edit{
-    float: right;
+
+.search {
+	width: 1000px !important;
 }
+
+.edit {
+	float: right;
+}
+
 /*
 Responsive Table
 */
 
-@media
-only screen and (max-width: 760px),
-(min-device-width: 768px) and (max-device-width: 1024px)  {
-    table, thead, tbody, th, td, tr {
-    display: block;
-    width: 100%;
- }
-    .header-search{
-       margin: 10px 0; 
-    }
- h1{
-     display: inline-block;
-     margin: 10px 30px;
- }
- .fa-cog{
-     width: 60%;
- }
+@media only screen and (max-width: 760px),
+(min-device-width: 768px) and (max-device-width: 1024px) {
 
- .wrapper{
-     margin-bottom: 70px;
- }
- .container{
-     width: 100%;
- }
+	table,
+	thead,
+	tbody,
+	th,
+	td,
+	tr {
+		display: block;
+		width: 100%;
+	}
 
- thead tr {
-    position: absolute;
-    top: -9999px;
-    left: -9999px;
- }
- tr{
-     border: 1px solid #ccc; 
-}
- td {
-    /* Behave  like a "row" */
-    border: none;
-    border-bottom: 1px solid #eee;
-    position: relative;
-    padding-left: 50%;
- }
+	.header-search {
+		margin: 10px 0;
+	}
 
- 
- td:before {
- /* Now like a table header */
- position: absolute;
- /* Top/left values mimic padding */
-    top: 6px;
-    left: 6px;
-    width: 45%;
-    padding-right: 10px;
-    white-space: nowrap;
-    font-weight: bold;
- 
- }
- 
- /*
+	h1 {
+		display: inline-block;
+		margin: 10px 30px;
+	}
+
+	.fa-cog {
+		width: 60%;
+	}
+
+	.wrapper {
+		margin-bottom: 70px;
+	}
+
+	.container {
+		width: 100%;
+	}
+
+	thead tr {
+		position: absolute;
+		top: -9999px;
+		left: -9999px;
+	}
+
+	tr {
+		border: 1px solid #ccc;
+	}
+
+	td {
+		/* Behave  like a "row" */
+		border: none;
+		border-bottom: 1px solid #eee;
+		position: relative;
+		padding-left: 50%;
+	}
+
+
+	td:before {
+		/* Now like a table header */
+		position: absolute;
+		/* Top/left values mimic padding */
+		top: 6px;
+		left: 6px;
+		width: 45%;
+		padding-right: 10px;
+		white-space: nowrap;
+		font-weight: bold;
+
+	}
+
+	/*
  Label the data
  */
- tr:nth-child(even) {
-    background-color: lightgray;
+	tr:nth-child(even) {
+		background-color: lightgray;
+	}
+
+	td:nth-of-type(1):before {
+		content: "Ticker";
+	}
+
+	td:nth-of-type(2):before {
+		content: "Company";
+	}
+
+	td:nth-of-type(3):before {
+		content: "Shares";
+	}
+
+	td:nth-of-type(4):before {
+		content: "Prince";
+	}
+
+	td:nth-of-type(5):before {
+		content: "Initial Value";
+	}
+
+	td:nth-of-type(6):before {
+		content: "Market Value";
+	}
+
+	td:nth-of-type(7):before {
+		content: "P/L";
+		color: #949BA2;
+	}
 }
- td:nth-of-type(1):before { content: "Ticker"; }
- td:nth-of-type(2):before { content: "Company"; }
- td:nth-of-type(3):before { content: "Shares"; }
- td:nth-of-type(4):before { content: "Prince"; }
- td:nth-of-type(5):before { content: "Initial Value"; }
- td:nth-of-type(6):before { content: "Market Value"; }
- td:nth-of-type(7):before { content: "P/L"; color:#949BA2;}
+
+@media only screen and (max-width: 760px) {
+	h1 {
+		margin: 10px 5px;
+	}
+
+	.fa-cog {
+		width: 65%;
+	}
+
+	.search {
+		margin: 15px;
+	}
 }
-@media
-only screen and (max-width: 760px){
-h1{
-    margin:10px 5px;
-}
-.fa-cog{
-    width: 65%;
-}
-    .search{
-        margin: 15px;
-    }
-}
+
 /* Footer */
 
 #footer .section-title {
-    text-align: center;
-    color: #007b5e;
-    margin-bottom: 50px;
-    text-transform: uppercase;
+	text-align: center;
+	color: #007b5e;
+	margin-bottom: 50px;
+	text-transform: uppercase;
 }
+
 #footer {
-	margin-top:20px;
+	margin-top: 20px;
 	padding: 20px 10px;
 	text-align: center !important;
-    background: #343A40 !important;
+	background: #343A40 !important;
 }
-#footer h5{
-    padding-bottom: 6px;
-    margin-bottom: 20px;
-    color:#ffffff;
+
+#footer h5 {
+	padding-bottom: 6px;
+	margin-bottom: 20px;
+	color: #ffffff;
 }
+
 #footer a {
-    color: #ffffff;
-    text-decoration: none !important;
-    background-color: transparent;
-    -webkit-text-decoration-skip: objects;
+	color: #ffffff;
+	text-decoration: none !important;
+	background-color: transparent;
+	-webkit-text-decoration-skip: objects;
 }
-#footer ul.social li{
+
+#footer ul.social li {
 	padding: 3px 0;
 	font-size: 20px;
 }
+
 #footer ul.social li a i {
-    margin-right: 5px;
-	font-size:25px;
+	margin-right: 5px;
+	font-size: 25px;
 	-webkit-transition: .5s all ease;
 	-moz-transition: .5s all ease;
 	transition: .5s all ease;
 }
+
 #footer ul.social li:hover a i {
-	font-size:30px;
-	margin-top:-10px;
+	font-size: 30px;
+	margin-top: -10px;
 }
+
 #footer ul.social li a,
-#footer ul.quick-links li a{
-	color:#ffffff;
+#footer ul.quick-links li a {
+	color: #ffffff;
 }
-#footer ul.social li a:hover{
-	color:#eeeeee;
+
+#footer ul.social li a:hover {
+	color: #eeeeee;
 }
-#footer ul.quick-links li{
+
+#footer ul.quick-links li {
 	padding: 3px 0;
 	-webkit-transition: .5s all ease;
 	-moz-transition: .5s all ease;
 	transition: .5s all ease;
 }
-#footer ul.quick-links li:hover{
+
+#footer ul.quick-links li:hover {
 	padding: 3px 0;
-	margin-left:5px;
-	font-weight:700;
+	margin-left: 5px;
+	font-weight: 700;
 }
-#footer ul.quick-links li a i{
+
+#footer ul.quick-links li a i {
 	margin-right: 5px;
 }
+
 #footer ul.quick-links li:hover a i {
-    font-weight: 700;
+	font-weight: 700;
 }
-.footer-align{
+
+.footer-align {
 	text-align: center;
 }
-@media (max-width:767px){
+
+@media (max-width:767px) {
 	#footer h5 {
-    padding-left: 0;
-    border-left: transparent;
-    padding-bottom: 0px;
-    margin-bottom: 10px;
+		padding-left: 0;
+		border-left: transparent;
+		padding-bottom: 0px;
+		margin-bottom: 10px;
+	}
 }
-}
+
 /*===============================================HOMEPAGE =============================================================*/
-.home-container{
-    display: grid;
-    grid-template-columns: 65% 35%;
+.home-container {
+	display: grid;
+	grid-template-columns: 65% 35%;
 }
-.home-portfolio, .home-watchlist{
+
+.home-portfolio,
+.home-watchlist {}
+
+.home-portfolio-title {
+	margin: 10px 10%;
+	display: inline-block;
+	width: 30%;
 }
-.home-portfolio-title{
-    margin: 10px 10%;
-    display: inline-block;
-    width: 30%;
+
+.home-icon {
+	font-size: 30px;
 }
-.home-icon{
-    font-size: 30px;
+
+.home-status {
+	/*    background-color: aquamarine;*/
+	margin-top: 20px;
+	margin-right: 20px;
+	grid-row: 1/3;
+	grid-column: 2/3;
 }
-.home-status{
-    background-color: aquamarine;
-    margin-top: 20px;
-    margin-right: 20px;
-    grid-row: 1/3;
-    grid-column: 2/3;
+
+@media only screen and (max-width: 760px) {
+	.home-container {
+		display: grid;
+		grid-template-columns: 100%;
+	}
+
+	.home-status {
+		margin-right: 20px;
+		grid-row: 0;
+		grid-column: 0;
+	}
 }
-@media only screen and (max-width: 760px){
-    .home-container{
-        display: grid;
-        grid-template-columns: 100%;
-    }
-    .home-status{
-        margin-right: 20px;
-        grid-row: 0;
-        grid-column: 0;
-    }   
-}
+
 /*===============================================CHART=============================================================*/
-.chart-wrapper{
-    margin-top: 20px;
+.chart-wrapper {
+	margin-top: 20px;
 }
-.row-chart{
-    display: inline-block;
-    float: right;
-    margin-right: 15%;
+
+.row-chart {
+	display: inline-block;
+	float: right;
+	margin-right: 15%;
 }
-.chart-title{
-    margin-left: 20%;
-    margin-top: 50px;
-    margin-bottom: 20px;
-    display: inline-block;
-    margin-right: 10px;
+
+.chart-title {
+	margin-left: 20%;
+	margin-top: 50px;
+	margin-bottom: 20px;
+	display: inline-block;
+	margin-right: 10px;
 }
-.chart-search{
-    width: 20%;
-    margin-left: 20%;
-    display: inline-block;    
+
+.chart-search {
+	width: 20%;
+	margin-left: 20%;
+	display: inline-block;
 }
-.fa-long-arrow-alt-up, .chart-data{
-    color: lightgreen;
+
+.fa-long-arrow-alt-up,
+.chart-data {
+	color: lightgreen;
 }
+
 /*===============================================SEARCH RESULT =====================================================*/
-#chartContainer{
-    height: 370px; 
-    width: 70%;
-    margin: 0 auto;
-    margin-top: -10px;
-    margin-bottom: 50px;
-}
-.img{
-    width: 70%;
-    margin: 0 180px;
-}
-.news{
-    margin-left: 180px;
-}
-.sr-title{
-    margin-top:50px;
-    margin-left: 15%;
-    width: 60%;
-}
-.hr{
-    margin-left: 15%;
-    width: 70%; 
+#chartContainer {
+	height: 370px;
+	width: 70%;
+	margin: 0 auto;
+	margin-top: -10px;
+	margin-bottom: 50px;
 }
 
+.img {
+	width: 70%;
+	margin: 0 180px;
+}
 
+.news {
+	margin-left: 180px;
+}
+
+.sr-title {
+	margin-top: 50px;
+	margin-left: 15%;
+	width: 60%;
+}
+
+.hr {
+	margin-left: 15%;
+	width: 70%;
+}
